# NexusShell

./: .gitignore  CONTRIBUTING.md  README.md  buildplan.md  continueprompt.md
.github/workflows/: ci.yml  docs.yml  release.yml
nexusshell/: Cargo.toml
nexusshell/src/: main.rs
nexusshell/src/shell/: command.rs  completion.rs  environment.rs  executor.rs  help.rs  history.rs  mod.rs  parser.rs  plugins.rs  syntax.rs
nexusshell/src/shell/plugins/: fileops.rs  git.rs  mod.rs  network.rs  process.rs
nexusshell/src/shell/plugins/cloud/: aws.rs  azure.rs  gcp.rs  mod.rs
nexusshell/src/shell/plugins/container/: docker.rs  kubernetes.rs  mod.rs
nexusshell/src/shell/plugins/devtools/: formatter.rs  mod.rs  package_manager.rs  tests.rs
nexusshell/src/shell/plugins/remote/: mod.rs  sftp.rs  ssh.rs
nexusshell/src/shell/plugins/scheduler/: job.rs  mod.rs  queue.rs
nexusshell/src/shell/plugins/scripting/: engine.rs  mod.rs
nexusshell/src/shell/plugins/security/: mod.rs  tests.rs
wiki/: Command-Reference.md  Home.md  Installation.md
